hw: changed variables dependency

--- a/NonLinearEquations/NonLinearEquations.ipynb
+++ b/NonLinearEquations/NonLinearEquations.ipynb
@@ -586,7 +586,7 @@
     "M = 500\n",
     "\n",
     "# Values from newton method.\n",
-    "x_k = iterations(f, 500, *bounds_narrowed[0])\n",
+    "x_k = iterations(f, M, *bounds_narrowed[0])\n",
     "\n",
     "# Initializing k list.\n",
     "k = list(range(len(x_k)))\n",
